# conan-sqlite

./: CMakeLists.txt  README.md  conanfile.py
test/: CMakeLists.txt  conanfile.py  test.c
